# vkvoxel

./: .gitignore  Block.h  BlockType.cpp  BlockType.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  FastNoise.cpp  FastNoise.h  Frustum.cpp  Frustum.h  InputState.h  LICENSE.md  Main.cpp  Plane.cpp  Plane.h  README.md  Renderer.cpp  Renderer.h  TextureAtlas.cpp  TextureAtlas.h  Vertex.cpp  Vertex.h  VkChunk.cpp  VkChunk.h  VkManager.cpp  VkManager.h  VkRenderer.cpp  VkRenderer.h  VkTextureAtlas.cpp  VkTextureAtlas.h  VkUtil.h  VkVoxelApplication.cpp  VkVoxelApplication.h  World.cpp  World.h  vk_mem_alloc.h
shaders/: compile.bat  shader.frag  shader.vert
textures/: blocks.json
